[Fix]-Added production secrets * This is for temporary * Not at all recomended approach

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -26,7 +26,14 @@ test:
       user_name: 'something@example.com'
       api_hash: '123456fafafaf'
       sender_name: 'TXTLCL'
+
 # Do not keep production secrets in the repository,
 # instead read values from the environment.
 production:
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+
+  sms:
+    trxn:
+      user_name: 'manager.employeeapp@gmail.com'
+      api_hash: 'a44321883edc58360dc6f96c2e983148b225c951'
+      sender_name: 'TXTLCL'
